<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/white"
            android:elevation="@dimen/dimen4"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_marginEnd="@dimen/dimen16"
                android:layout_marginLeft="@dimen/dimen16"
                android:layout_marginRight="@dimen/dimen16"
                android:layout_marginStart="@dimen/dimen16"
                android:contentDescription="@string/dummy_cd"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen8"
                android:layout_marginLeft="@dimen/dimen8"
                android:layout_marginRight="@dimen/dimen8"
                android:layout_marginStart="@dimen/dimen8"
                android:layout_weight="1"
                android:text="@string/login_screen_title"
                android:textSize="@dimen/title_text_size" />

            <Button
                android:id="@+id/login_help"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/logo_size"
                android:layout_marginEnd="@dimen/dimen16"
                android:layout_marginLeft="@dimen/dimen16"
                android:layout_marginRight="@dimen/dimen16"
                android:layout_marginStart="@dimen/dimen16"
                android:background="@drawable/login_help_background"
                android:text="@string/login_help"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_toolbar"

            android:layout_marginEnd="@dimen/dimen16"
            android:layout_marginLeft="@dimen/dimen16"
            android:layout_marginRight="@dimen/dimen16"
            android:layout_marginStart="@dimen/dimen16"
            android:layout_marginTop="@dimen/dimen32"
            android:hint="@string/email_hint"
            android:theme="@style/LoginTextLabel">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailWrapper"
            android:layout_marginEnd="@dimen/dimen16"
            android:layout_marginLeft="@dimen/dimen16"
            android:layout_marginRight="@dimen/dimen16"
            android:layout_marginStart="@dimen/dimen16"
            android:layout_marginTop="@dimen/dimen8"
            android:hint="@string/password_hint"
            android:theme="@style/LoginTextLabel">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/password_show"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen32"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/emailWrapper"
            android:layout_marginEnd="@dimen/dimen16"
            android:layout_marginRight="@dimen/dimen16"
            android:layout_marginTop="@dimen/dimen16"
            android:background="@drawable/login_show_button_background"
            android:text="@string/login_show_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/dimen16"
            android:background="@drawable/login_button_background"
            android:text="@string/login_button_text"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</layout>