<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/dimen4"
        android:layout_marginEnd="@dimen/dimen8"
        android:layout_marginLeft="@dimen/dimen8"
        android:layout_marginRight="@dimen/dimen8"
        android:layout_marginStart="@dimen/dimen8"

        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        tools:showIn="@layout/content_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen12">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/dimen32"
                android:layout_height="@dimen/dimen32"
                android:layout_centerVertical="true"
                android:contentDescription="@string/dummy_cd"
                android:padding="@dimen/dimen4"
                android:src="@drawable/assigned_leads_icon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen12"
                android:layout_marginStart="@dimen/dimen12"
                android:layout_toEndOf="@id/icon"
                android:layout_toRightOf="@id/icon"
                android:text="@string/cross_sell_leads"
                android:textAllCaps="true"
                android:textColor="@color/au_text_dark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="@dimen/dimen12"
                android:layout_marginStart="@dimen/dimen12"
                android:layout_toEndOf="@id/icon"
                android:layout_toRightOf="@id/icon"
                android:text="@string/cross_sell_leads_sub"
                android:textColor="@color/au_text_light"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="@dimen/dimen32"
                android:layout_height="@dimen/dimen32"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/dummy_cd"
                android:padding="@dimen/dimen8"
                android:src="@drawable/arrow_right" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>